Clean up general code